--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,87 @@
-.App {
-  text-align: center;
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "main main main"
-    "footer footer footer";
+html,
+body {
+  height: 100%;
 }
 
-header {
-  grid-area: header;
+ul,
+li {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+
+.outter {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
-  grid-area: main;
+  padding-bottom: 2.5rem;
+  margin: 0 auto;
+}
+
+.App {
+  text-align: center;
+  display: flex;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+
+}
+
+.quoteCard {
+  text-align: left;
+  margin: 0 auto;
+  border-left: 5px yellow solid;
+  font-size: small;
+  padding-left: 20px;
+}
+
+.author h3 {
+  justify-self: flex-start;
+}
+
+.author span {
+  /* justify-self: flex-end;
+  display: inline-block; */
+  margin: 0 0 0 auto;
+}
+
+.author {
+  background: rgb(65, 59, 59);
+  margin: 70px auto;
+  display: flex;
+  align-items: center;
+  padding: 1em;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  width: 60vw;
+}
+
+.author a:hover,
+a:visited,
+a:link,
+a:active {
+  text-decoration: none;
 }
 
 footer {
-  grid-area: footer;
+  text-align: center;
+  opacity: 50%;
+  width: 100%;
+  height: 2.5rem;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 20vh;
+  background-color: #fff;
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding: 20px 5vw 0 20px;
   color: white;
 }
 
@@ -34,12 +89,47 @@ footer {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+@media (min-width:320px) {
+
+  /* smartphones, iPhone, portrait 480x320 phones */
+  .quoteCard {
+    width: 80%;
+  }
+}
+
+@media (min-width:481px) {
+
+  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+  .author {
+    width: 40vw;
   }
 
-  to {
-    transform: rotate(360deg);
+  main {
+    margin: auto;
   }
+
+  .quoteCard {
+    width: 60vw;
+  }
+}
+
+@media (min-width:641px) {
+  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+}
+
+@media (min-width:961px) {
+  /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
+
+@media (min-width:1023px) {
+
+  /* big landscape tablets, laptops, and desktops */
+  .quoteCard {
+    padding-left: 20px;
+  }
+}
+
+@media (min-width:1281px) {
+  /* hi-res laptops and desktops */
 }
